# LSxD

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  release-plz.toml
.github/workflows/: build-artifacts.yml  build.yml  changelog.yml  ci.yml  compile.yml  cross-compile.yml  on-push-main.yml  on-tag.yml  push-on-main.yml  release-plz.yml  release.yml  relezase-plz.yml
src/: color.rs  commands.rs  compare.rs  convert.rs  display.rs  main.rs  output_color.rs  types.rs
src/commands/: directories.rs  files.rs  get_dirs.rs  get_files.rs  get_list.rs  get_size.rs  lines.rs
src/parsers/: files.rs
