[package]
name = "LSxD"
version = "0.1.0"
edition = "2024"
authors = ["Victor Aubinaud"]
description = "A easy way to display directories and their size"
documentation= "https://github.com/vi17250/LSxD"
repository= "https://github.com/vi17250/LSxD"
license = "MIT"
readme = "README.md"
homepage= "https://github.com/vi17250/LSxD"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
