[package]
name = "lsxd"
version = "0.1.8"
edition = "2024"
authors = ["Victor Aubinaud"]
description = "A easy way to display directories and their size"
documentation= "https://github.com/vi17250/lsxd"
repository= "https://github.com/vi17250/lsxd"
license = "MIT"
readme = "README.md"
homepage= "https://github.com/vi17250/lsxd"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
fs_extra = "1.3.0"
human_bytes = "0.4.3"
regex = "1.11.1"
